--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     </form>
 
                     <ul class="navbar-nav">
-                       @* @await Component.InvokeAsync("ShoppingCartSummary")*@
+                        @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
                     @*<partial name="_Identity.cshtml" />*@
                 </div>
