--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                     <ul class="navbar-nav">
                         @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
-                    @*<partial name="_Identity.cshtml" />*@
+                    <partial name="_Identity.cshtml" />
                 </div>
             </div>
         </nav>
