--- a/Views/CINAMAS/Index.cshtml
+++ b/Views/CINAMAS/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable<CINAMA>
+﻿@model IEnumerable<CINAMA>
 
 @{
     ViewData["Title"] = "List of Cinemas";
@@ -7,38 +7,43 @@
     <div class="col-md-8 offset-md-2">
         <table>
             <thead class="table">
-                    <tr class="text-center">
+                <tr class="text-center">
                     <th>@Html.DisplayNameFor(model=> model.Logo)</th>
                     <th>@Html.DisplayNameFor(model=> model.Name)</th>
                     <th>@Html.DisplayNameFor(model=> model.Description)</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                    {
                         <th> Actions</th>
-                    </tr>
+                    }
+
+                </tr>
             </thead>
             <tbody>
-                @foreach(var item in Model)
+                @foreach (var item in Model)
                 {
                     <tr>
-                        <td class="align-middle"> 
-                            <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width:150px"/> 
+                        <td class="align-middle">
+                            <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width:150px" />
                         </td>
-                        <td  class="align-middle">
+                        <td class="align-middle">
                             @Html.DisplayFor(modelItem=> item.Name)
                         </td>
-                        <td  class="align-middle">
+                        <td class="align-middle">
                             @Html.DisplayFor(modelItem=> item.Description)
                         </td>
-                        <td  class="align-middle">
-                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.ID"> <i class="bi bi-pencil-square"> </i> Edit</a>
-                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.ID"> <i class="bi bi-eye"></i> Details</a>
-                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.ID"> <i class="bi bi-trash"></i> Delete</a>
-
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                        {
+                            <td class="align-middle">
+                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.ID"> <i class="bi bi-pencil-square"> </i> Edit</a>
+                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.ID"> <i class="bi bi-eye"></i> Details</a>
+                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.ID"> <i class="bi bi-trash"></i> Delete</a>
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
             <tr>
                 <td>
-
                 </td>
             </tr>
         </table>
