--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -10,15 +10,19 @@
             </h4>
         </p>
         <table class="table">
-           <thead>
-               <tr>
+            <thead>
+                <tr>
                     <th>Order ID</th>
                     <th>Items </th>
                     <th>Total</th>
-                    <th>User</th>
-               </tr>
-           </thead>
-           <tbody>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                    {
+                        <th>User</th>
+                    }
+
+                </tr>
+            </thead>
+            <tbody>
                 @foreach (var order in Model)
                 {
                     <tr>
@@ -38,7 +42,10 @@
                         <td class=" align-middle">
                             @order.OrderItems.Select(m => m.MOVIE.Price*m.Amount).Sum().ToString("c")
                         </td>
-                        <td class=" align-middle"> - </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                        {
+                            <td class=" align-middle"> @order.User.FullNmae </td>
+                        }
                     </tr>
                 }
             </tbody>
